service.yaml
apiVersion: v1
kind: Service
metadata:
  name: danuri-image-backend
  namespace: danuri
spec:
  selector:
    app: danuri-image-backend
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
